crates/launcher-interface/src/snapshots/launcher_interface__types__tests__docker_digest.snap
---
source: crates/launcher-interface/src/types.rs
expression: json
---
"sha256:abababababababababababababababababababababababababababababababab"
