crates/launcher-interface/src/snapshots/launcher_interface__types__tests__docker_digest_display.snap
---
source: crates/launcher-interface/src/types.rs
expression: digest.to_string()
---
sha256:abababababababababababababababababababababababababababababababab
