crates/launcher-interface/src/snapshots/launcher_interface__types__tests__docker_digest_roundtrip.snap
---
source: crates/launcher-interface/src/types.rs
expression: "serde_json::to_value(&deserialized).unwrap()"
---
"sha256:abababababababababababababababababababababababababababababababab"
